frontend/src/Manager/Manager.css
.inventory {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.new-ingredient {
    padding: 20px;
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    justify-content: center;
    text-align: center;
}

.new-ingredient h2 {
    margin-top: 0;
    color: black;
}

  .large-text .inventory, .large-text .inventory-details, .large-text .inventory-item, .large-text .selected-item {
    font-size: 20px;
  }

.toggle-button-container {
    margin-bottom: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.toggle-button {
    padding: 10px 20px;
    font-size: 16px;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.inventory-list {
    flex: 1;
    display: grid;
    padding-right: 20px;
    padding-bottom: 50px;
}

.inventory-details {
    background-color: white;
    position: fixed;
    flex: 1;
    padding-left: 20px;
}

.inventory h2 {
    font-size: 20px;
    margin-bottom: 10px;
}

.inventory-item {
    cursor: pointer;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-bottom: 10px;
    transition: background-color 0.3s ease;
}

.inventory-item:hover {
    background-color: #f0f0f0;
}

.inventory-item span {
    display: block;
    margin-bottom: 5px;
}

.selected-item {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 10px;
    background-color: #f9f9f9;
}

.selected-item h3 {
    margin-bottom: 10px;
}

.selected-item div {
    margin-bottom: 10px;
}

.selected-item label {
    font-weight: bold;
    margin-right: 10px;
}

.middleContent {
    font-size: 100px;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

/* Menu Items */
.manager-menu-items {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
}
  .large-text .manager-menu-items, .large-text .h2, .large-text .left-panel, .large-text .right-panel, .large-text .selected {
    font-size: 30px;
  }

.left-panel {
    width: 45%;
}

.right-panel {
    width: 45%;
}

h2 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

table {
    width: 100%;
    border-collapse: collapse;
}

th, td {
    padding: 0.5rem;
    border-bottom: 1px solid #ccc;
    text-align: left;
}

tr:hover {
    background-color: #f5f5f5;
}

.selected {
    background-color: #cce5ff;
}

.button-panel {
    margin-top: 1rem;
    margin-bottom: 75px;
}

button {
    padding: 0.5rem 1rem;
    margin-right: 0.5rem;
    font-size: 1rem;
    cursor: pointer;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 4px;
}

button:hover {
    background-color: #0056b3;
}

button:disabled {
    background-color: #ccc;
    cursor: not-allowed;
}

.right-panel ul {
    list-style-type: none;
    padding: 0;
}

.right-panel li {
    margin-bottom: 0.5rem;
}

.right-panel label {
    display: block;
    margin-bottom: 0.5rem;
}

.right-panel input {
    width: 100%;
    padding: 0.5rem;
    font-size: 1rem;
    margin-bottom: 1rem;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.right-panel input:disabled {
    background-color: #f5f5f5;
    cursor: not-allowed;
}

/* Order History */
.order-history {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
}

  .large-text .order-history, .large-text .order-list, .large-text .h2, .large-text .order-item {
    font-size: 20px;
  }

.order-list {
    flex: 1;
    max-width: 30%;
    margin-right: 20px;
    padding-bottom: 50px;
}

.order-list h2 {
    margin-bottom: 20px;
    font-size: 1.5rem;
}

.order-item {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 10px;
    margin-bottom: 10px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.order-item:hover {
    background-color: #f0f0f0;
}

.order-item.selected {
    background-color: #e0e0e0;
}

.order-details {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
    padding-right: 20px;
}

.order-details h2 {
    margin-bottom: 20px;
    font-size: 1.5rem;
    justify-content: center;
    align-items: center;
}

.selected-order {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 20px;
}

.selected-order span {
    display: block;
    margin-bottom: 10px;
    font-size: 1.2rem;
}

.selected-order span:last-child {
    margin-bottom: 0;
}

/* Trends */
.trends h2 {
    font-size: 48px;
    margin-bottom: 20px;
}

.large-text .trends, .large-text .date-fields, .large-text .trend-buttons button {
    font-size: 20px;
}

.date-fields {
    margin-bottom: 20px;
}

.date-fields label {
    margin-right: 10px;
}

.date-fields input {
    margin-right: 10px;
    padding: 5px;
}

.trend-buttons button {
    margin-right: 10px;
    margin-bottom: 10px;
    padding: 10px 20px;
    font-size: 16px;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

